--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -19,11 +19,12 @@
              <h1><a href="/">Django Girls Blog</a></h1>
          </div>
 
-         <div>
+         {% for post in posts %}
+          <div>
              <p>published: 14.06.2014, 12:14
              <h2><a href="">My first post</a></h2>
-             <p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulm. Donec id e lit non mi porta gravida at eget metus. Fusce dapidus, tellus ac cursus commodo, tortor mauris condiment um nibh, ut fermentum massa justo sit amet risus.</p>
-           </div>
+             <p>{{ post.text|linebreaksbr }}</p>
+          </div>
 
            <div>
              <p>published: 14.06.2014, 12:14</p>
@@ -32,3 +33,9 @@
           </div>
         </body>
       </html>
+      {{ posts }}
+<QuerySet [<Post: My second post>, <Post: My first post>]>
+
+  {% for post in posts %}
+      {{ post }}
+      {% endfor %}
